--- a/style.css
+++ b/style.css
@@ -32,3 +32,25 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  font-family: 'Lato Regular';
+  font-weight: 400;
+  font-size: 12px;
+  color: #767e9e;
+}
+
+.container {
+  max-width: 970px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.align-end {
+  align-items: flex-end;
+}
