--- a/style.css
+++ b/style.css
@@ -54,3 +54,55 @@ body {
 .align-end {
   align-items: flex-end;
 }
+
+.title {
+  margin-bottom: 14px;
+  color: #666d89;
+  font-family: 'Lato Bold';
+  font-size: 30px;
+}
+
+.header {
+  padding: 35px 0;
+  height: 95px;
+  color: #ffffff;
+  font-family: 'Lato Bold';
+  font-weight: 700;
+  background-color: #2d303a;
+  border-bottom: 6px solid #323746;
+}
+
+.logo {
+  font-size: 25px;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.logo span {
+  color: #f06c64;
+}
+
+.navigation {
+  margin-left: auto;
+}
+
+.navigation__list {
+  display: flex;
+}
+
+.navigation__link {
+  color: inherit;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: color 0.3s;
+}
+
+.navigation__link:hover {
+  color: #f06c64;
+}
+
+.navigation__items:not(:last-child)::after {
+  content: '·';
+  margin: 0 11px;
+  color: #494e62;
+}
